--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -76,18 +76,32 @@ nav {
   gap: 80px;
   flex-wrap: wrap;
 }
-
 .padding-movie {
   padding: 1rem 10%;
+}
+@media screen and (max-width: 1350px) {
+  .padding-movie {
+    padding: 0.5rem 5%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .padding-movie {
+    padding: 0.5rem 2rem;
+  }
+  .feature h3 {
+    font-size: 30px;
+  }
+  .movie__card__container {
+    justify-content: center;
+  }
 }
 
 @media screen and (max-height: 1000px) {
   .app__home {
     height: 100vh;
   }
-  .padding-movie {
-    padding: 1rem 5%;
-  }
+
   nav {
     padding: 1rem 5%;
   }
@@ -112,6 +126,11 @@ nav {
   .app__home {
     width: 100%;
     height: 80vh;
+  }
+}
+@media screen and (max-width: 760px) {
+  .padding-movie {
+    padding: 0.5rem 3rem;
   }
 }
 
@@ -147,5 +166,14 @@ nav {
     padding: 1rem 1rem;
     flex-wrap: wrap;
     gap: 1rem;
+  }
+
+  .feature h3 {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 400px) {
+  .padding-movie {
+    padding: 0.5rem 1rem;
   }
 }
