--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -129,11 +129,14 @@
   }
 
   .app__hero {
-    padding-left: 2rem;
+    padding-left: 1rem;
     margin-top: 3rem;
   }
   .app__hero__content h1 {
     font-size: 2.5rem;
+  }
+  .app__hero__numbers {
+    display: none;
   }
 
   .rating {
@@ -161,5 +164,14 @@
   .active h6 {
     color: white;
     font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .app__hero {
+    padding-left: 0.5rem;
+  }
+  .app__hero__content h1 {
+    font-size: 1.3rem;
   }
 }
