--- a/src/components/MovieCard/Moviecard.css
+++ b/src/components/MovieCard/Moviecard.css
@@ -3,17 +3,34 @@
   height: 490px;
   color: unset;
   text-decoration: none;
+  padding-bottom: 0.8rem;
+  overflow: hidden;
 }
-.movie-card:hover {
-  opacity: 0.5;
-  border: 2px solid red;
+
+.movie__card img {
+  width: 300px;
+  height: 420px;
+  overflow: hidden;
+}
+
+.movie__card:hover {
+  background-color: rgb(239, 233, 233);
+  transition: 0.4s;
+}
+
+.movie__card:hover img {
+  opacity: 0.8;
+  width: 350px;
+  transition: 0.5s;
 }
 .movie__content {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  gap: 15px;
+  gap: 10px;
+  padding-left: 1rem;
 }
+
 .movie__content h6 {
   color: var(--gray-900, #111827);
   font-size: 20px;
@@ -28,4 +45,47 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+@media screen and (max-width: 760px) {
+  .movie__card {
+    width: 400px;
+    height: 500px;
+  }
+  .movie__card:hover {
+    background-color: rgb(239, 233, 233);
+    transition: 0.4s;
+  }
+
+  .movie__card:hover img {
+    opacity: 0.8;
+    width: 100%;
+    transition: 0.5s;
+  }
+  .movie__card img {
+    width: 400px;
+    height: 420px;
+    object-fit: cover;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .movie__card {
+    width: 100%;
+    height: 100%;
+  }
+  .movie__card:hover {
+    background-color: rgb(239, 233, 233);
+    transition: 0.4s;
+  }
+
+  .movie__card:hover img {
+    opacity: 0.8;
+  }
+
+  .movie__card img {
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+  }
 }
