--- a/src/pages/MovieDetails/MovieDetails.css
+++ b/src/pages/MovieDetails/MovieDetails.css
@@ -15,7 +15,13 @@
   justify-content: center;
   margin-bottom: 1rem;
 }
-
+.runtime {
+  color: black;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.1rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
 .react__player img {
   height: 100%;
   width: 100%;
